--- a/index.html
+++ b/index.html
@@ -76,10 +76,26 @@
         </div>
     </section>
     
-    <!-<!-- Kontak -->
-    <section id="contact">
-        <h2>Kontak Saya</h2>
-        <p>Ingin berbicara lebih lanjut? Silakan hubungi saya melalui:</p>
+    <!-- Kontak -->
+<section id="contact">
+    <h2>Kontak Saya</h2>
+    <p>Ingin berbicara lebih lanjut? Silakan hubungi saya melalui salah satu metode berikut:</p>
+    <!-- Formulir Kontak -->
+    <form
+  action="https://formspree.io/f/xnnnojnn"
+  method="POST">
+        <label for="name">Nama:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Pesan:</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Kirim Pesan</button>
+    </form>
+        <p>Atau melalui media sosial di bawah ini:</p>
         <ul class="contact-list">
             <li class="contact-item"><a href="https://wa.link/vjqyo3" target="_blank">WhatsApp</a></li>
             <li class="contact-item"><a href="https://www.instagram.com/muhammad_taopik_fahlevi" target="_blank">Instagram</a></li>
